Fix alignment

--- a/src/pages/DepartmentHead/Services/ServiceForm.css
+++ b/src/pages/DepartmentHead/Services/ServiceForm.css
@@ -8,7 +8,7 @@
     padding: 20px;
     background: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin-right: 110px;
+    margin-right: -800px;
     margin-top: 20px;
     height: 350px;
   }
