--- a/src/pages/DepartmentHead/pages/Transaction.css
+++ b/src/pages/DepartmentHead/pages/Transaction.css
@@ -8,7 +8,7 @@
   position: relative;
   margin-left: 359px;
   margin-top: 200px;
-  
+  position: fixed;
 }
 
 .addButton {
